--- a/Source/Samples/Samples/Shared/MainLayout.razor
+++ b/Source/Samples/Samples/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-@inject Proxoft.Maps.Core.Api.IMapFactory mapFactory
+@inject Proxoft.Maps.Core.Api.Factories.IMapFactory mapFactory
 
 <div>
     <a href="/">Single Map</a>
