--- a/Source/Samples/Samples/Pages/Polygon.razor
+++ b/Source/Samples/Samples/Pages/Polygon.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Polygon"
+@implements IDisposable
 
 @using Proxoft.Maps.Core.Api.Shapes;
 @using System.Reactive.Linq;
@@ -158,7 +159,7 @@
                         new LatLng { Latitude = 51.51m,  Longitude = -0.15m },
                         new LatLng { Latitude = 51.45m,  Longitude = -0.15m },
                         new LatLng { Latitude = 51.45m,  Longitude = -0.06m },
-        }
+    }
                 },
                 Style = new()
                 {
@@ -174,5 +175,16 @@
         _polygon2.OnEvent
             .OfType<MouseClickEvent>()
             .Subscribe(_ => this.OnPolygonClick(_polygon2));
+    }
+
+    public void Dispose()
+    {
+        Console.WriteLine("disposing polygons");
+
+        _polygon.Dispose();
+        _polygon2.Dispose();
+        _map.Dispose();
+
+        Console.WriteLine("disposed page polygons");
     }
 }
