--- a/Source/Samples/Samples/Pages/Polygon.razor
+++ b/Source/Samples/Samples/Pages/Polygon.razor
@@ -5,6 +5,7 @@
 @using System.Reactive.Linq;
 @using System.Text.Json.Serialization;
 @using System.Text.Json;
+@using Proxoft.Maps.Core.Api.Shapes.Polygones;
 
 <div>
     <div class="map-container" @ref="MapHost">
