--- a/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
+++ b/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
@@ -23,6 +23,13 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="polyline">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
+                Polyline
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="circle">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
                 Circle
