--- a/Source/MapSamples/MapSamples.Client/Pages/_Imports.razor
+++ b/Source/MapSamples/MapSamples.Client/Pages/_Imports.razor
@@ -1,7 +1,10 @@
-﻿@using System.Reactive.Linq;
-@using Proxoft.Maps.Core.Abstractions.Models;
-@using Proxoft.Maps.Core.Api;
-@using Proxoft.Maps.Core.Api.Maps;
+﻿@using System.Reactive.Linq
+@using Proxoft.Maps.Core.Abstractions.Models
+@using Proxoft.Maps.Core.Api
+@using Proxoft.Maps.Core.Api.Maps
+@using Proxoft.Maps.Core.Api.Shapes
+@using Proxoft.Maps.Core.Api.Shapes.Polygones
+@using Proxoft.Maps.Core.Api.Shapes.Polylines
 @using Proxoft.Maps.Core.Api.Shapes.Circles
 
 @inherits MapComponent
