--- a/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
+++ b/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
@@ -16,6 +16,13 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="marker">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
+                Marker
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="polygon">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
                 Polygon
