Moved sample pages to newest MapSamples. Deleted deprecated Samples project

--- a/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
+++ b/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
@@ -16,6 +16,20 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="map">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
+                Map
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="twoMaps">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
+                2 Maps
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="marker">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
                 Marker
@@ -44,16 +58,16 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
+            <NavLink class="nav-link" href="geocoding">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
-                Counter
+                Geocoding
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>
-                Weather
+            <NavLink class="nav-link" href="staticMap">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
+                Static Map
             </NavLink>
         </div>
     </nav>
