--- a/Source/MapSamples/MapSamples.Client/Pages/MapMethods.razor
+++ b/Source/MapSamples/MapSamples.Client/Pages/MapMethods.razor
@@ -1,6 +1,4 @@
-﻿@page "/MapMethods"
-
-
+﻿@page "/Map"
 
 <div style="width: 100%; height: 500px;" @ref="MapHost">
 </div>
@@ -42,7 +40,7 @@
         </div>
     </div>
 
-    <div class="map-event-log">
+    <div class="default-map-event-log">
         @foreach (var l in MapLog.Reverse<string>())
         {
             <span>@l</span><br />
