--- a/Source/MapSamples/MapSamples.Client/_Imports.razor
+++ b/Source/MapSamples/MapSamples.Client/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Proxoft.Maps.MapSamples.Client
+@using Proxoft.Optional
