--- a/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
+++ b/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
@@ -58,6 +58,13 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="rectangle">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
+                Rectangle
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="geocoding">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
                 Geocoding
