fixed setBounds, setCenter behaviour

--- a/Source/MapSamples/MapSamples.Client/Pages/Rectangle.razor
+++ b/Source/MapSamples/MapSamples.Client/Pages/Rectangle.razor
@@ -8,9 +8,26 @@
     </div>
 </div>
 
+<div>
+    <button @onclick=@(() => this.TogglePosition())>Toggle position</button>
+    <button @onclick=@(() => this.ToggleCenter())>Toggle center</button>
+</div>
+
 @code {
     private IMap _map = Proxoft.Maps.Core.Api.NoMap.Instance;
     private IRectangle _rectangle = NoRectangle.Instance;
+    private bool _positionToggle = true;
+    private bool _centerToggle = true;
+
+    private LatLngBounds _position1 = LatLngBounds.FromCorners(
+            new LatLng { Latitude = 51.50m, Longitude = -0.07m },
+            new LatLng { Latitude = 51.48m, Longitude = -0.05m }
+        );
+
+    private LatLngBounds _position2 = LatLngBounds.FromCorners(
+        new LatLng { Latitude = 51.52m, Longitude = -0.09m },
+        new LatLng { Latitude = 51.46m, Longitude = -0.04m }
+    );
 
     private ElementReference MapHost { get; set; }
 
@@ -27,7 +44,7 @@
             {
                 Center = new LatLng { Latitude = 51.49m, Longitude = -0.06m },
                 Zoom = 12,
-                // TraceJs = true
+            // TraceJs = true
             };
 
         this.MapFactory.Initialize(mapOptions, this.MapHost)
@@ -57,11 +74,26 @@
             {
                 Color = "#ff7800",
                 Weight = 1,
-                FillColor = "gray",
                 FillOpacity = 0.5m,
             },
         };
 
         _rectangle = _map.AddRectangle(options);
+    }
+
+    private void TogglePosition()
+    {
+        LatLngBounds bounds = _positionToggle ? _position2 : _position1;
+        _positionToggle = !_positionToggle;
+
+        _rectangle.SetBounds(bounds);
+    }
+
+    private void ToggleCenter()
+    {
+        LatLng center = _centerToggle ? _position2.Center : _position1.Center;
+        _centerToggle = !_centerToggle;
+
+        _rectangle.SetCenter(center);
     }
 }
