--- a/Source/MapSamples/MapSamples.Client/Pages/MapMethods.razor
+++ b/Source/MapSamples/MapSamples.Client/Pages/MapMethods.razor
@@ -38,6 +38,9 @@
             <span>Lat:</span><input @bind-value="FitToBoundsLat" />
             <span>Lng:</span><input @bind-value="FitToBoundsLng" />
         </div>
+        <div>
+            Draggable <input type="checkbox" @bind="this.Draggable" />
+        </div>
     </div>
 
     <div class="default-map-event-log">
