--- a/Source/MapSamples/MapSamples.Client/Pages/MapMethods.razor
+++ b/Source/MapSamples/MapSamples.Client/Pages/MapMethods.razor
@@ -44,7 +44,7 @@
     </div>
 
     <div class="default-map-event-log">
-        @foreach (var l in MapLog.Reverse<string>())
+        @foreach (var l in this.Log)
         {
             <span>@l</span><br />
         }
